<resources>
    <string name="app_name">WaniKani Mobile</string>
    <string name="launch_name">WKMobile</string>
    <string name="new_reviews_42plus">You have %d+ reviews</string>
    <string name="new_reviews">You have %d reviews</string>
    <string name="new_review">You have one review</string>
    <string name="new_lessons_42plus">You can unlock %d+ items</string>
    <string name="new_lessons">You can unlock %d items</string>
    <string name="new_lesson">You can unlock one item</string>
    <string name="next_review">Next review in %s</string>
    <string name="next_hour_no_review">No reviews next hour</string>
    <string name="next_hour_one_review">One review next hour</string>
    <string name="next_hour_reviews">%d reviews next hour</string>
	<string name="fmt_not_next_review_d">Next review on %s</string>
	<string name="fmt_not_next_review_b">Next review at %s</string>
    <string name="tpref_notifications">Notifications</string>
    <string name="tpref_dashboard">Dashboard</string>
    <string name="tpref_reviews">Reviews</string>
    <string name="tpref_export">Export</string>
    <string name="tpref_review_enhancements">Userscripts and enhancements</string>
    <string name="pref_enabled">Enable notifications</string>
    <string name="pref_this_level">Current level items icon</string>
    <string name="pref_persistent">Persistent notifications</string>
    <string name="pref_persistent_home">Open dashboard</string>
    <string name="pref_not_threshold">Threshold</string>
    <string name="pref_not_threshold_desc">Will notify when at least %d reviews are pending</string>
    <string name="pref_not_threshold_one_desc">Will notify when at least one review is pending</string>
    <string name="pref_lessons_enabled">Notify lessons too</string>
    <string name="pref_lessons_enabled_descr">Notify also when new items can be unlocked</string>
    <string name="pref_use_integrated_browser">Use integrated browser</string>
    <string name="pref_use_integrated_browser_desc">Open integrated browser when doing reviews and lessons</string>
    <string name="pref_use_external_browser_desc">Open external browser when doing reviews and lessons</string>
    <string name="pref_external_items">External Items</string>
    <string name="pref_external_items_descr">Open external browser when opening item pages during
        			reviews and lessons</string>
    <string name="pref_refresh_timeout">Refresh interval</string>
    <string name="pref_refresh_descr">Data will be refreshed every %d minutes</string>
	<string name="pref_refresh_one_min_descr">Data will be refreshed every minute</string>
	<string name="pref_mistake_delay">Mistake Delay</string>
	<string name="pref_mistake_delay_descr">Block enter for one second after entering a wrong answer.
	    	Port of Rui Pinheiro\'s userscript</string>
	<string name="pref_error_popup">Auto popup</string>
	<string name="pref_error_popup_descr">Open info popup automatically after entering a wrong answer</string>
	<string name="pref_userkey_descr">Copy here the "Public API Key" from your Account Settings page</string>
    <string name="pref_userkey">User API Key</string>
    <string name="pref_review_improvements">Review Improvements</string>
    <string name="pref_review_improvements_desc">Enable userscripts and Custom IME</string>
    <string name="pref_romaji">Force romaji</string>
    <string name="pref_romaji_desc">Disable suggestions when entering english words. 
        Might enable romaji if using system IME</string>
    <string name="pref_disable_suggestions">No suggestions</string>
    <string name="pref_disable_suggestions_desc">Disable suggestions when entering japanese words</string>
    <string name="pref_ignore_button">Ignore Button</string>
    <string name="pref_ignore_button_descr">Enable porting of Rui Pinheiro\'s ignore button</string>
    <string name="pref_single_button">Single Button</string>
    <string name="pref_single_button_descr">Show \"1\" button, to enable item by item mode 
        				(reading and meaning are next to each other)</string>
    <string name="pref_portrait">Portrait mode</string>
    <string name="pref_portrait_descr">Force portrait mode when entering answers</string>
    <string name="pref_srs_indication">SRS Indication</string>
    <string name="pref_srs_indication_descr">Show current item SRS level during reviews</string>
    <string name="pref_wanikani_improve">WaniKani improve</string>
    <string name="pref_wanikani_improve_descr">Skip to next question, if correct. Port of
        		\@Seiji and \@Jatacid scripts</string>
    <string name="pref_review_order">Review Order</string>
    <string name="pref_review_order_descr">Review radicals and kanji first. Port of
        		\@Alucardeck\'s WKRO script</string>
    <string name="pref_lesson_order">Lesson Order</string>
    <string name="pref_lesson_order_descr">Teach radicals and kanji first. Port of
        		\@Alucardeck\'s WKLO script</string>
    <string name="pref_lesson_order_rev">Put vocab first</string>
    <string name="pref_lesson_order_rev_on_descr">Vocab items will be moved first, in a batch of lessons</string>
    <string name="pref_lesson_order_rev_off_descr">Radical/Kanji items will be moved first, in a batch of lessons</string>
    <string name="pref_external_frame_placer">External frame placer</string>
    <string name="pref_external_frame_placer_descr">
        		Enable \@jeshuamorrissey\'s script, showing an external dictionary page
        		in the lessons module (requires a large screen)</string>
    <string name="pref_part_of_speech">Part of Speech</string>
    <string name="pref_part_of_speech_descr">
        		Enable \@jeshuamorrissey\'s script, annotating items with external definitions,
        		part of speech and additional notes. Source is EDICT (see About)</string>
    <string name="em_refresh">Refresh</string>
    <string name="em_settings">Settings</string>
    <string name="em_export">Export</string>
    <string name="em_import">Import</string>
    <string name="em_meters">Meters</string>
    <string name="em_custom_fonts">Choose JP font</string>
    <string name="tag_filter_by">Show</string>
    <string name="tag_filter_unlocks">recent unlocks</string>
    <string name="tag_filter_critical">critical items</string>
    <string name="tag_sort_by">Sort by</string>
    <string name="tag_sort_type">type</string>
    <string name="tag_sort_srs">SRS</string>
    <string name="tag_sort_errors">errors</string>
    <string name="tag_sort_time">unlock date</string>
    <string name="os_levels">SRS by level</string>
    <string name="os_kanji_levels">SRS by level</string>
    <string name="ct_jlpt_progress">JLPT Progress</string>
    <string name="ct_joyo_progress">Joyo Progress</string>
    <string name="tag_settings">Settings</string>
    <string name="tag_reset">Reset</string>
    <string name="tag_counter_format">Show counters as</string>
    <string name="tag_total">Total</string>
    <string name="tag_service">Background process</string>
    <string name="tag_app">Application</string>
    <string name="mc_mobile">Mobile network:</string>
    <string name="mc_wifi">WiFi, WiMAX:</string>
    <string name="mc_unknown">Unknown network:</string>
    <string name="tag_notify_timeout">Polling</string>
    <string name="tag_change_connectivity">Connectivity changes</string>
    <string name="tag_daily_jobs">Data collection for stat plots</string>
    <string name="tag_dashboard_refresh">Dashboard refresh</string>
    <string name="tag_me_items">Item browser</string>
    <string name="tag_me_other_stats">Stats</string>
    <string name="tag_reconstruct">Reconstruction process</string>
    <string name="tag_me_notice">Note: these are approximate values, 
        	regarding the API only (e.g. browsing sessions are excluded)</string>
    <string name="tag_current_fonts">Current font</string>
    <string name="tag_current_font_description">
        If multiple fonts are selected, they will be rotated during reviews</string>
    <string name="tag_import_from_file">Import from file&#8230;</string>
    <string name="tag_download_from_web">Download from web&#8230;</string>
    <string name="id_description">
        	This tool imports the historical database from a file created by the export menu item
        	(usually it is called wkexport.csv). It can be useful e.g. when changing your phone.
        	It won\'t touch existing data, but it can fill the \"gray\" areas when data
        	has been reconstructed or is missing. Before doing this, however, it is a good idea
        	exporting your current DB in case something goes wrong.\nHint: you can also open the export 
        	file from a	file manager. If you select the	WaniKani Mobile app, you won\'t have to enter the 
        	path manually</string>
    <string name="id_location_tag">Import database dump from</string>
    <string name="id_import">Import</string>
    <string name="info_credits_title">Credits</string>
	<string name="info_credits">    
This program contains many important contributions from WaniKani users, who kindly
gave permission to integrate their work:</string>
		<string name="info_credit_rui">\@ruipgpinheiro</string>
	<string name="info_credit_rui_descr">
<a href="https://www.wanikani.com/chat/api-and-third-party-apps/2940">WaniKani Override</a>\n
<a href="https://www.wanikani.com/chat/api-and-third-party-apps/3981">WaniKani KunOn</a>
<a href="https://www.wanikani.com/chat/api-and-third-party-apps/3026">WaniKani Mistake Delay</a>
</string>
	<string name="info_credit_seiji">\@Seiji</string>
	<string name="info_credit_seiji_descr">
<a href="https://www.wanikani.com/chat/api-and-third-party-apps/2952">WaniKani Improve</a>
</string>
	<string name="info_credit_alucardeck">\@alucardeck</string>
	<string name="info_credit_alucardeck_descr">
<a href="https://www.wanikani.com/chat/api-and-third-party-apps/3023">WaniKani Review Order</a>\n
<a href="https://www.wanikani.com/chat/api-and-third-party-apps/3878">WaniKani Lesson Order</a>
	</string>
	<string name="info_credit_jeshuamorrissey">\@jeshuamorrissey</string>
	<string name="info_credit_jeshuamorrissey_descr">
<a href="https://www.wanikani.com/chat/api-and-third-party-apps/3947">External Definition Frame Placer</a>\n
<a href="https://www.wanikani.com/chat/api-and-third-party-apps/4882">WaniKani Part-Of-Speech</a>
    </string>
	<string name="info_credit_edict">This program uses the 
<a href="http://www.csse.monash.edu.au/~jwb/edict.html">EDICT</a> and
<a href="http://www.csse.monash.edu.au/~jwb/kanjidic.html">KANJIDIC</a> dictionary files.
These files are the property of the 
<a href="http://www.edrdg.org/"> Electronic Dictionary 
Research and Development Group</a>, and are used in
conformance with the Group\'s 
<a href="http://www.edrdg.org/edrdg/licence.html">licence</a></string>
	<string name="info_licence_title">Licence Terms</string>
	<string name="info_licence_text">
Copyright &#169; 2013-2014 Alberto Cuda\n
\n	    
This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.\n
\n
This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.\n
\n
You should have received a copy of the GNU General Public License
along with this program.  If not, see http://www.gnu.org/licenses/.        
    </string>
    <string name="info_thanks_title">Thanks</string>
	<string name="info_thanks">
The author wishes to thank all the WK community members for constant support and
their suggestions. And of course thanks to Viet and Koichi for making such an impressive site.	    
	</string>
</resources>