<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/em_refresh" android:title="@string/em_refresh" 
          android:showAsAction="ifRoom|withText"  android:icon="@drawable/ic_menu_refresh"/>   
    <item android:id="@+id/em_settings" android:title="@string/em_settings" 
          android:showAsAction="ifRoom|withText" android:icon="@drawable/ic_menu_preferences"/>
    <item android:id="@+id/em_meters" android:title="@string/em_meters" 
          android:showAsAction="ifRoom|withText" android:icon="@drawable/ic_menu_view"/>
    <item android:id="@+id/em_customfonts" android:title="@string/em_custom_fonts" 
          android:showAsAction="ifRoom|withText" android:icon="@drawable/ic_menu_change_font"/>
    <item android:id="@+id/em_export" android:title="@string/em_export" 
          android:showAsAction="ifRoom|withText" android:icon="@drawable/ic_menu_save"/>
    <item android:id="@+id/em_import" android:title="@string/em_import" 
          android:showAsAction="ifRoom|withText" android:icon="@drawable/ic_menu_restore"/>
</menu>