<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/ChartTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_licence_title" />

        <LinearLayout
            style="@style/Table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        	<TextView
                style="@style/Estimates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_licence_text" />
           </LinearLayout>        
        
        <TextView
            style="@style/ChartTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_credits_title" />

        <LinearLayout
            style="@style/Table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/Contribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_credits" />
            
            <TextView
                style="@style/Contributor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_credit_rui"/>
                
            <TextView
                android:id="@+id/info_link_rui"
                style="@style/Contribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_credit_rui_descr"/>
            
            <TextView
                style="@style/Contributor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_credit_seiji"/>
                
            <TextView
                android:id="@+id/info_link_seiji"
                style="@style/Contribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_credit_seiji_descr"/>
            
            <TextView
                style="@style/Contributor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_credit_alucardeck"/>
                
            <TextView
                android:id="@+id/info_link_alucardeck"
                style="@style/Contribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_credit_alucardeck_descr"/>
            
            <TextView
                style="@style/Contributor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_credit_jeshuamorrissey"/>
                
            <TextView
                android:id="@+id/info_link_jeshuamorissey"
                style="@style/Contribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_credit_jeshuamorrissey_descr"/>
            
    		<View style="@style/Separator" />    
            
            <TextView
                android:id="@+id/info_link_edict"
                style="@style/Contribution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_credit_edict"/>                       
         </LinearLayout>

        <TextView
            style="@style/ChartTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_thanks_title" />

        <LinearLayout
            style="@style/Table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        	<TextView
                style="@style/Estimates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_thanks" />
           </LinearLayout>                
        
	</LinearLayout>
</ScrollView>