<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res/com.wanikani.androidnotifier" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/ChartTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_settings" />

        <LinearLayout
            style="@style/Table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/Estimates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_counter_format" />

            <Spinner
                android:id="@+id/me_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/me_choices"
                android:prompt="@string/tag_counter_format" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/me_last_reset"
                    style="@style/Estimates"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

                <Button
                    android:id="@+id/me_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/tag_reset" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/ChartTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_service" />

        <LinearLayout
            style="@style/Table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
		        style="@style/Meter"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:text="@string/tag_total" />
            
            <com.wanikani.androidnotifier.MeterCountersView                
                android:id="@+id/me_service_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>            
            
            <com.wanikani.androidnotifier.MeterCountersView
                android:id="@+id/me_notify_timeout"
                custom:title="@string/tag_notify_timeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.wanikani.androidnotifier.MeterCountersView
                android:id="@+id/me_change_connectivity"
                custom:title="@string/tag_change_connectivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
            <com.wanikani.androidnotifier.MeterCountersView
                android:id="@+id/me_daily_jobs"
                custom:title="@string/tag_daily_jobs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
                        
        </LinearLayout>

        <TextView
            style="@style/ChartTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_app" />

        <LinearLayout
            style="@style/Table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
		        style="@style/Meter"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:text="@string/tag_total" />
            <com.wanikani.androidnotifier.MeterCountersView                
                android:id="@+id/me_app_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>            
            
            <com.wanikani.androidnotifier.MeterCountersView
                android:id="@+id/me_dahsboard_refresh"
                custom:title="@string/tag_dashboard_refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.wanikani.androidnotifier.MeterCountersView
                android:id="@+id/me_items"
                custom:title="@string/tag_me_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.wanikani.androidnotifier.MeterCountersView
                android:id="@+id/me_reconstruct"
                custom:title="@string/tag_reconstruct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
					
           <com.wanikani.androidnotifier.MeterCountersView
                android:id="@+id/me_other_stats"
                custom:title="@string/tag_me_other_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        
    <TextView 
        style="@android:style/TextAppearance.Small"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tag_me_notice"/>
        
    </LinearLayout>

</ScrollView>