<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/os_scroll"
    xmlns:custom="http://schemas.android.com/apk/res/com.wanikani.androidnotifier"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <com.wanikani.androidnotifier.graph.ProgressChart
                android:id="@+id/os_jlpt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:title="@string/ct_jlpt_progress"  />
            
            <com.wanikani.androidnotifier.graph.ProgressChart
                android:id="@+id/os_joyo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:title="@string/ct_joyo_progress" />
            
       		<com.wanikani.androidnotifier.graph.HistogramChart 
       		    android:id="@+id/os_kanji_levels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:ticks="10"
                custom:title="@string/os_kanji_levels"/>
                   		       		
       		<com.wanikani.androidnotifier.graph.HistogramChart 
       		    android:id="@+id/os_levels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:ticks="10"
                custom:title="@string/os_levels"/>
	</LinearLayout>       		
</ScrollView>